# Coursework_6

./: README.md  pyproject.toml
frontend_react/: Dockerfile
skymarket/ads/: models.py  permissions.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py  0002_alter_ad_options_ad_author_ad_created_at_and_more.py  0003_alter_comment_options_comment_ad_comment_author_and_more.py  0004_alter_comment_ad.py  0005_remove_comment_ad_comment_ad.py  0006_alter_comment_options.py
skymarket/fixtures/: comments.json
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  managers.py  models.py  serializers.py
skymarket/users/migrations/: 0001_initial.py  0002_user_is_active.py  0003_alter_user_role.py  0004_alter_user_image.py  0005_alter_user_first_name_alter_user_last_name_and_more.py  0006_alter_user_password.py  0007_alter_user_role.py
