[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["Andrew Zaiko <andrewzaiko@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_6"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
