[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["Andrew Zaiko <andrewzaiko@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_6"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
python-dotenv = "^0.21.0"
djangorestframework = "^3.14.0"
django-phonenumber-field = "^7.0.2"
phonenumbers = "^8.13.4"
django-cors-headers = "^3.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
